[package]
name = "exa"
description = "A modern replacement for ls"

authors = ["Benjamin Sago <ogham@bsago.me>"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = ["/devtools/*", "/Justfile", "/Vagrantfile", "/screenshots.png"]
homepage = "https://the.exa.website/"
license = "MIT"
repository = "https://github.com/ogham/exa"
version = "0.10.0"


[[bin]]
name = "exa"


[dependencies]
ansi_term = "0.12"
glob = "0.3"
lazy_static = "1.3"
libc = "0.2"
locale = "0.2"
log = "0.4"
natord = "1.0"
num_cpus = "1.10"
number_prefix = "0.4"
scoped_threadpool = "0.1"
term_grid = "0.1"
term_size = "0.3"
unicode-width = "0.1"
users = "0.11"
zoneinfo_compiled = "0.5.1"

[dependencies.datetime]
version = "0.5.2"
default-features = false
features = ["format"]

[dependencies.git2]
version = "0.13"
optional = true
default-features = false

[build-dependencies.datetime]
version = "0.5.2"
default-features = false

[features]
default = [ "git" ]
git = [ "git2" ]
vendored-openssl = ["git2/vendored-openssl"]


# make dev builds faster by excluding debug symbols
[profile.dev]
debug = false

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true


[package.metadata.deb]
license-file = [ "LICENCE" ]
depends = "$auto"
extended-description = """
exa is a replacement for ls written in Rust.
"""
section = "utils"
priority = "optional"
assets = [
    [ "target/release/exa", "/usr/bin/exa", "0755" ],
    [ "contrib/man/exa.1", "/usr/share/man/man1/exa.1", "0644" ],
    [ "contrib/completions.bash", "/etc/bash_completion.d/exa", "0644" ],
]
